# ForestGainFoundations

./: .gitignore  README.md  run_aoi_generation.sh
DataCollection/: README.md  data_analysis.ipynb  gee.py  gee_inspection.ipynb  generate_aois-attempt-at-classifying.py  generate_aois.py  generate_test_aoi_checkpoint.py  rclone_instructions.txt  requirements.txt  test_aois.py  tile_vis.py  vis_global_aios.py
DataCollection/data/aois/: aoi_filter_checkpoint.json  aoi_filter_rejected.json  rejected_aois.json
DataCollection/forest_gain_tiling/: config.py  enums.py  main.py  models.py  pyproject.toml
DataCollection/forest_gain_tiling/datasets/: registry.py
DataCollection/forest_gain_tiling/export/: composites.py  drive.py  tasks.py
DataCollection/forest_gain_tiling/filtering/: aoi_batches.py  aoi_filter.py  checks.py  raster_stats.py  tasks.py  validate_raster_method.py
DataCollection/forest_gain_tiling/labels/: gain.py  pseudo.py  viability.py
DataCollection/forest_gain_tiling/registry/: database.py  store.py
DataCollection/forest_gain_tiling/stack/: stacks.py
DataCollection/forest_gain_tiling/tiling/: grid.py  selection.py
data/aois/: aoi_filter_checkpoint.json
